--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.14.6",
     "gatsby-plugin-feed": "^5.15.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-mdx": "^5.15.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-remark-autolink-headers": "^6.15.0",
     "gatsby-remark-images": "^7.15.0",
     "gatsby-remark-prismjs": "^7.15.0",
-    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-remark-table-of-contents": "^2.0.0",
+    "gatsby-source-filesystem": "^5.15.0",
     "gatsby-transformer-remark": "^6.15.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "prismjs": "^1.30.0",
