--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.6.0",
     "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.14.6",
     "gatsby-plugin-feed": "^5.15.0",
@@ -13,12 +14,14 @@
     "gatsby-plugin-mdx": "^5.15.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-remark-autolink-headers": "^6.15.0",
+    "gatsby-remark-highlight-code": "^3.3.0",
     "gatsby-remark-images": "^7.15.0",
     "gatsby-remark-prismjs": "^7.15.0",
     "gatsby-remark-table-of-contents": "^2.0.0",
     "gatsby-source-filesystem": "^5.15.0",
     "gatsby-transformer-remark": "^6.15.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "isomorphic-dompurify": "^2.35.0",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
