--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b deploy",
+    "deploy": "gatsby build && gh-pages -d public -b deploy"
   },
   "repository": {
     "type": "git",
